--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -394,6 +394,9 @@
 - name:  Should I add FieldTrip with all subdirectories to my MATLAB path?
   link:  /faq/should_i_add_fieldtrip_with_all_subdirectories_to_my_matlab_path
 
+- name:  Is it OK for vertices/dipoles to stick out of the volume conductor?
+  link:  /faq/sticking_out
+
 - name:  Should I use a Polhemus or a Structure Sensor to record electrode positions?
   link:  /faq/structuresensor
 
