--- a/_data/tag/entropy.yml
+++ b/_data/tag/entropy.yml
@@ -1,3 +1,3 @@
-- name:  Performing multi-scale entropy analysis on EEG/MEG/LFP data
+- name:  Performing multiscale entropy analysis on EEG/MEG/LFP data
   link:  /example/entropy_analysis
 
